--- a/.github/workflows/collect-hourly.yml
+++ b/.github/workflows/collect-hourly.yml
@@ -7,7 +7,7 @@ name: ⚽ 10min Data Collection
 
 on:
   schedule:
-    # 매 시간 정각 (UTC) → 한국시간으로도 매 시간
+    # 10분마다 실행 (UTC)
     - cron: "*/10 * * * *"
   
   # 수동 실행 (테스트/디버그용)
@@ -21,7 +21,7 @@ on:
 jobs:
   collect:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 30
 
     steps:
       - name: 📥 코드 체크아웃
